--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
     "debug": "~2.1.1",
-    "jade": "~1.8.2"
+    "ejs": "~2.5.7"
+  },
+  "dbconnection":{
+    "connectionstr":"mongodb://localhost:27017/myMongoDB"
   }
 }
